--- a/1-iniciante/makefile
+++ b/1-iniciante/makefile
@@ -1,4 +1,4 @@
-f = e
+f = 1001
 
 all:
 	clear
@@ -11,7 +11,7 @@ diff:
 	clear
 	node $(f).js < input > output
 	clear
-	diff output ans
+	colordiff output ans
 clean:
 	clear
 	rm output ans input
