--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint 'src/**/*.js' --fix",
-    "format": "prettier-eslint 'server/**/*.{js,json}' --write"
+    "format": "prettier-eslint 'server/**/*.{js,json}' --write",
+    "new": "cp ../templates/template.js $(node -p \"require('./package.json').f\").js"
   }
 }
