--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "test": "jest",
     "lint": "eslint 'src/**/*.js' --fix",
     "format": "prettier-eslint 'server/**/*.{js,json}' --write",
-    "new": "node .tools/generate.js"
+    "g": "node .tools/generate.js"
   }
 }
