--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "author": "Leandro Alves <leandrosustenido@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "jest": "^29.7.0"
   },
   "devDependencies": {
-    "eslint": "^8.2.0",
+    "@types/jest": "^29.5.12",
+    "eslint": "^9.1.1",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-node": "^4.1.0",
@@ -22,11 +25,13 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^3.2.5",
-    "prettier-eslint-cli": "^8.0.1"
+    "prettier-eslint-cli": "^8.0.1",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.4.5"
   },
   "scripts": {
     "test": "jest",
-    "lint": "eslint 'src/**/*.js' --fix",
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts",
     "format": "prettier-eslint 'server/**/*.{js,json}' --write",
     "g": "node .tools/generate.js"
   }
