--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,4 @@
 {
-  "parser": "@typescript-eslint/parser",
   "extends": ["airbnb", "prettier", "plugin:node/recommended", "plugin:@typescript-eslint/recommended"],
   "plugins": ["prettier", "@typescript-eslint"],
   "rules": {
@@ -11,11 +10,12 @@
     "object-shorthand": "off",
     "class-methods-use-this": "off",
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/consistent-type-definitions": ["error", "type"], 
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
   },
   "env": {
     "jest": true
   },
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module"
   }
